# uh2sc

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: pytest.yml  python-publish.yml
docs/source/: background.rst  conf.py  details.rst  howto.rst  index.rst  knownissues.rst  quickstart.rst  theory.rst  whatisnext.rst
helpers/: cool_prop_h2_methane_fit.py  cycling_time_lists_for_yml_input.py  cylinde_formulas.py  dataset_creation.py  gas_pressure_profile_and_mass_flow_rates.py  plotdigitizer.py  utils.py  vector_function_emulator.py
src/: main.py
src/input_schemas/: func_1.py  ghe_schema.yml  schema_general.yml  valve_schema.yml  valve_type_schema.yml  well_schema.yml
src/main/: __init__.py
src/uh2sc/: __init__.py  abstract.py  constants.py  errors.py  fluid.py  fluidfit.py  ghe.py  hdclass.py  hdclass_parallel_mess.py  main.py  model.py  salt_cavern.py  salt_cavern_start_point.py  solvers.py  thermodynamics.py  transport.py  utilities.py  validator.py  well.py
src/uh2sc/input_schemas/: func_2.py  ghe_schema.yml  schema_general.yml  valve_schema.yml  valve_type_schema.yml  valve_types.yml  well_schema.yml
tests/: conftest.py  test_basics.py  test_coolprop_accuracy.py  test_ghe_explicit.py  test_ghe_implicit.py  test_main.py  test_model.py  test_salt_cavern.py  test_thermodynamics.py  test_transport.py  test_utilities.py  test_verification.py  test_vertical_pipe.py  test_well.py
tests/test_data/: 2008_Nieland_Fig13_12_cycles_per_year.csv  2008_Nieland_Fig13_1_cycle_per_year.csv  2008_Nieland_Fig13_4_cycles_per_year.csv  2008_Nieland_Fig15_12_cycles_per_year.csv  2008_Nieland_Fig15_1_cycle_per_year.csv  2008_Nieland_Fig15_4_cycles_per_year.csv  2022-HANEtal_Model_pressure.csv  2022_Han_Change_of_mass.csv  2022_Han_Change_of_mass_try2.csv  2022_Han_ModelTemperature_Fig5b.csv  2022_Han_PressureData.csv  2022_Han_TemperatureData_Fig5b.csv  2022_Han_et_al_mass_of_air.csv  Gnielinski_Figue1_Pr07_powers_of_10.csv  HanEtAl_2022_24hr_ops_validation_air.yml  gas_mixture_test_too_fast_of_flow.yml  nieland_verification_h2_12_cycles.yml  nieland_verification_h2_1_cycles.yml  nieland_verification_h2_4_cycles.yml  nieland_verification_h2_SHORT.yml  nieland_verification_methane_12_cycles.yml  nieland_verification_methane_1_cycles.yml  nieland_verification_methane_4_cycles.yml  nielson_verification.yml  nielson_verification_h2_12_cycles.yml  nielson_verification_h2_4_cycles.yml  salt_cavern_mdot_only_test.yml  salt_cavern_test.yml
